<resources>
    <string name="app_name">Launcher for the RPM Roleplay minecraft server</string>
    <string name="app_short_name">RPM Launcher</string>
    <string name="hint_control_mapping">"Tap the top center cog icon to open the context menu ⚙\nTap a button to customize: edit, resize, delete, or customize it's keybind."</string>
    <string name="alerttitle_installmod">Select a mod installer</string>
    <string name="error_fatal">RPM Launcher has unexpectedly crashed</string>
    <string name="error_show_more">Show more</string>
    <string name="error_show_less">Show less</string>
    <string name="toast_permission_denied">The read/write to storage permission is required!</string>
    <string name="mcl_option_customcontrol">Custom controls</string>
    <string name="mcl_setting_title_use_surface_view">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_title_mousescale">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4">Holy GL4ES - (all versions, fast)</string>
    <string name="mcl_setting_renderer_vulkan_zink">Zink (Vulkan) - (all versions, mid)</string>
    <string name="mcl_setting_renderer_angle">ANGLE (Vulkan) - (1.17+ only, mid)</string>
    <string name="mcl_setting_java_sandbox">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="global_error">Error</string>
    <string name="global_load">Load</string>
    <string name="global_name">Name</string>
    <string name="global_clone">Clone</string>
    <string name="global_restart">Restart</string>
    <string name="global_save">Save</string>
    <string name="global_unpacking">Unpacking %s</string>
    <string name="global_error_field_empty">This field can\'t be empty</string>
    <string name="global_default">Default</string>
    <string name="mcn_exit_title">Application/Game exited with code %d, check latestlog.txt for more details.</string>
    <string name="mcn_exit_confirm">Are you sure want to force close?</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debug</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sec</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">3rd</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: off</string>
    <string name="control_mouseon">Mouse: on </string>
    <string name="control_forceclose">Force close</string>
    <string name="control_viewout">Log output</string>
    <string name="control_adebug">Input Debug</string>
    <string name="control_customkey">Send custom keycode</string>
    <string name="import_control_label">Import controls</string>
    <string name="import_control_invalid_file">Invalid or corrupted file</string>
    <string name="import_control_import_button">import controls</string>
    <string name="import_control_verifying_file">File is being verified, please wait and try again…</string>
    <string name="import_control_invalid_name">Invalid name or file already exists</string>
    <string name="import_control_done">Importation done</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_color">Background color</string>
    <string name="customctrl_corner_radius">Corner radius</string>
    <string name="customctrl_stroke_width">Stroke width</string>
    <string name="customctrl_stroke_color">Stroke color</string>
    <string name="customctrl_button_opacity">Button Opacity</string>
    <string name="customctrl_addbutton">Add button</string>
    <string name="customctrl_addbutton_drawer">Add button drawer</string>
    <string name="customctrl_addbutton_joystick">Add joystick</string>
    <string name="customctrl_addsubbutton">Add sub-button</string>
    <string name="customctrl_selectdefault">Select default controlmap</string>
    <string name="customctrl_export">Export controlmap</string>
    <string name="main_share_logs">Share log file</string>
    <string name="main_play">▶Play</string>
    <string name="autoram_info_msg">Memory set to %d MB</string>
    <string name="mcl_setting_check_libraries">Check libraries after downloading</string>
    <string name="mcl_setting_check_libraries_subtitle">This option forces the launcher to check the library hash if it\'s available. Prevents broken downloads.</string>
    <string name="mcl_disable_gestures">Disable gestures</string>
    <string name="mcl_disable_gestures_subtitle">Disables gestures, such as hold to break block, and tap to place a block.</string>
    <string name="mcl_disable_swap_hand">Disable double tap to swap hands</string>
    <string name="mcl_disable_swap_hand_subtitle">Disables double tapping on the hotbar item to swap it in the second hand.</string>
    <string name="mcl_setting_title_mousespeed">Mouse Speed</string>
    <string name="mcl_setting_subtitle_mousespeed">Changes the speed of the virtual mouse.</string>
    <string name="customctrl_passthru">Mouse pass-thru</string>
    <string name="customctrl_swipeable">Swipeable</string>
    <string name="customctrl_forward_lock">Forward lock</string>
    <string name="customctrl_absolute_tracking">Absolute finger tracking</string>
    <string name="memory_warning_msg">The current amount of free RAM (%d) is lower than allocated RAM (%d), which may lead to crashes. Change the allocation if the game crashes.</string>
    <string name="mcl_memory_allocation">Memory allocation</string>
    <string name="mcl_memory_allocation_subtitle">Controls how much memory is given to Minecraft.</string>
    <string name="multirt_runtime_corrupt">Corrupted Java Runtime</string>
    <string name="multirt_runtime_incompatiblearch">Incompatible architecture: %s</string>
    <string name="multirt_config_title">Java Runtimes</string>
    <string name="multirt_config_add">Add new</string>
    <string name="multirt_title">Runtime Manager</string>
    <string name="multirt_subtitle">Manage installed Java Runtimes.</string>
    <string name="multirt_progress_caching">Caching...</string>
    <string name="multirt_config_setdefault">Set default</string>
    <string name="multirt_config_setdefault_already">Default</string>
    <string name="multirt_config_removeerror_last">You must have at least one Java Runtime installed.</string>
    <string name="multirt_nocompartiblert">Can\'t find any compartible Java Runtime. This version requires Java %d or newer.</string>
    <string name="multirt_nojava8rt">Can\'t find Java 8. In order to use this option, you need to install Java 8.</string>
    <string name="multirt_delete_runtime">Delete runtime</string>
    <string name="preference_mouse_start_title">Start with virtual mouse on</string>
    <string name="preference_mouse_start_description">The virtual mouse appears at startup when this option is on.</string>
    <string name="preference_video_title">Video and renderer</string>
    <string name="preference_video_description">Resolution, renderer and performance</string>
    <string name="preference_control_title">Control customization</string>
    <string name="preference_control_description">Gestures, buttons and scaling</string>
    <string name="preference_java_title">Java Tweaks</string>
    <string name="preference_java_description">Java Runtimes, JVM Arguments, RAM amount and sandbox</string>
    <string name="preference_misc_title">Miscellaneous settings</string>
    <string name="preference_misc_description">Version list and libraries check</string>
    <string name="preference_experimental_title">Experimental Stuff</string>
    <string name="preference_experimental_description">Use things there with consideration, no support</string>
    <string name="preference_sustained_performance_title">Enable sustained performance mode</string>
    <string name="preference_sustained_performance_description">Limit thermal throttling by limiting peak performance.</string>
    <string name="preference_force_vsync_title">Force enable VSync</string>
    <string name="preference_force_vsync_description">Limit thermal throttling by limiting peak performance.</string>
    <string name="preference_force_english_title">Force language to English</string>
    <string name="preference_force_english_description">Allows you to see original strings, as intended by developers. Requires a restart.</string>
    <string name="preference_edit_controls_title">Edit custom controls</string>
    <string name="preference_edit_controls_summary">Tweak the control scheme to fit your needs.</string>
    <string name="preference_category_gyro_controls">Gyroscope controls</string>
    <string name="preference_category_virtual_mouse">Virtual mouse</string>
    <string name="preference_gyro_invert_x_axis">Invert X axis</string>
    <string name="preference_gyro_invert_y_axis">Invert Y axis</string>
    <string name="preference_gyro_invert_x_axis_description">Invert the horizontal axis.</string>
    <string name="preference_gyro_invert_y_axis_description">Invert the vertical axis.</string>
    <string name="preference_gyro_smoothing_title">Enable gyroscope smoothing</string>
    <string name="preference_gyro_smoothing_description">Reduce jitter in exchange of latency.</string>
    <string name="preference_back_title">Back to the last screen</string>
    <string name="global_delete">Delete</string>
    <string name="hint_user_name">Enter your username</string>
    <string name="acc_button_settings">Settings</string>
    <string name="acc_button_website">Website</string>
    <string name="acc_button_youtube">Social network: YouTube</string>
    <string name="acc_button_discord">Social network: Discord</string>
    <string name="acc_button_vk">Social network: VK</string>
    <string name="acc_button_tiktok">Social network: TikTok</string>
    <string name="acc_logo">RPM Roleplay logo</string>
    <string name="players_online">Players online:</string>
    <string name="text_online_default" translatable="false">-- / --</string>
</resources>